@@ -1,3 +1,8 @@
+(trunk)
+=======
+
+* Fix Android/iPhone bridges to work similar to others (https://github.com/jnicklas/capybara/issues/425)
+
 2.1.0 (2011-07-18)
 ==================
 
